# systemDeploy

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: main.yml
src/bicep/ContainerApps/: README.md
src/bicep/azAppService/: README.md  main_sys.bicep
src/bicep/azBlobStorage/: README.md  main.bicep
src/bicep/azCV/: README.md  main.bicep  test-az-cv.py
src/bicep/azContainerRegistry/: README.md
src/bicep/azCosmosDB/: README.md  run.py
src/bicep/azEventGridBlobs/: README.md
src/bicep/azFunctionApp/: .funcignore  README.md
src/bicep/azKeyVault/: README.md
src/bicep/azLinuxVM/: README.md
src/containers/docker/cmake_cpp_gtest/: CMakeLists.txt  Dockerfile  README.md  trandom.cpp
src/containers/docker/cmake_cpp_gtest/libs/: CMakeLists.txt
src/containers/docker/cmake_cpp_gtest/libs/random/: CMakeLists.txt
src/containers/docker/cmake_cpp_gtest/libs/random/include/: random.h
src/containers/docker/cmake_cpp_gtest/libs/random/src/: random.cpp
src/containers/docker/cmake_cpp_gtest/libs/turtle/: CMakeLists.txt
src/containers/docker/cmake_cpp_gtest/libs/turtle/include/: painter.h  turtle.h
src/containers/docker/cmake_cpp_gtest/test/: mock_turtle.h  trandom.cpp
src/containers/docker/dagster/alternative1/: README.md  pyproject.toml
src/containers/docker/dagster/alternative1/my-dagster-project/my_dagster_project/: assets.py
src/containers/docker/dagster/alternative1/my-dagster-project/my_dagster_project.egg-info/: SOURCES.txt
src/containers/docker/dagster/alternative2/: README.md  pyproject.toml  scrape.py
src/containers/docker/dagster/alternative3/: README.md  pyproject.toml
src/containers/docker/dagster/alternative3/src/: __init__.py  assets.py
src/containers/docker/neo4j/backend/: Dockerfile.etl  pyproject.toml
src/containers/docker/neo4j/backend/app/: main.py
src/containers/docker/neo4j/backend/src/backend/: __main__.py
src/containers/docker/openfga/: docker-compose.yml  main.py  pyproject.toml
src/containers/docker/simple-auth/: Dockerfile  Dockerfile.pgvector  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/containers/docker/simple-auth/alembic/: env.py  script.py.mako
src/containers/docker/simple-auth/alembic/versions/local/: 695ce1267b3c_add_post_table.py  99ee1cc3f26e_init_user_table.py  bbbb2ad55cee_rename_post_table.py
src/containers/docker/simple-auth/app/: database.py  main.py  settings.py
src/containers/docker/simple-auth/app/core/auth/: __init__.py
src/containers/docker/simple-auth/app/core/routers/: auth.py
src/containers/docker/simple-auth/src/simple_auth/: __init__.py
src/containers/docker/simple-auth/src/simple_auth/dataclasses/: __init__.py
src/containers/docker/simple-auth/tests/: test_.py
src/tf/CICDPipeline/: README.md  codebuild.tf  codecommit.tf  codepipeline.tf  iam_user.tf  var.tf
src/tf/EC2Kubeflow/: README.md  vars.tf
src/tf/EKSKubeflow/: README.md
src/tf/ElasticMapReduce/: README.md  outputs.tf  vars.tf
src/tf/RestAPIControlEC2/: README.md  apigw.tf  apigw_usage_plan.tf  apikey.tf  cloudwatch_alarm.tf  ebs.tf  eventbridge.tf  iam_role.tf  lambda.tf  lambda_function.py  output.tf  sg.tf  var.tf
src/tf/RestAPIGWLamb/: .gitignore  apigw.tf  apikey.tf  apiup.tf  iam.tf  lambda.tf  lambda_function.py  output.tf
src/tf/UpDownFiles/: README.md  autoscale.tf  docker-compose.dev.yml  docker-compose.yml  ecr.tf  sg.tf  var.tf  vpc.tf
src/tf/aurora-postgres-rds/: README.md  main.tf  outs.tf  vars.tf
src/tf/aws-dagster/: .dockerignore  .env.sample  Dockerfile.dagster  Dockerfile.pgvector  dagster-prod.yaml  dagster.yaml  docker-compose.yml  pyproject.toml  workspace-prod.yaml  workspace.yaml
src/tf/aws-dagster/architectures/: ec2.tf  ecr.tf  ecs-task.tf  ecs.tf  logging.tf  main.tf  network.tf  openvpn.tf  provider.tf  rds.tf  setup.sh  sg.tf  storage.tf  vars.tf
src/tf/aws-dagster/architectures/iam/: ec2_ecs_assume_policy.json  ec2_role_policy.json  ecs_role_policy.json
src/tf/aws-dagster/architectures/src/: update-ddns.py
src/tf/aws-dagster/codelocations/: Dockerfile.user_code
src/tf/aws-dagster/codelocations/etl1/: pyproject.toml
src/tf/aws-dagster/codelocations/etl1/etl1/: __init__.py
src/tf/aws-dagster/codelocations/etl2/: pyproject.toml
src/tf/aws-dagster/codelocations/etl2/etl2/: __init__.py
src/tf/batch-lambda/: README.md  ecr.tf  iam.tf  main.tf  networks.tf  security.tf  storage.tf  vars.tf
src/tf/cloud9/: main.tf  outs.tf
src/tf/cognito/: outputs.tf  vars.tf
src/tf/cognito-app/: docker-compose.yml
src/tf/cognito-app/backend/: .env.sample  Dockerfile  pyproject.toml
src/tf/cognito-app/backend/app/: main.py  settings.py
src/tf/cognito-app/backend/app/core/auth/: __init__.py
src/tf/dataExternal/: main.tf  outputs.tf
src/tf/databricks/: README.md  iam.tf  main.tf  outputs.tf  s3.tf  tutorial.tfvars.tpl  vars.tf  vpc.tf  workspace.tf
src/tf/datasync-s3-efs/: README.md  iam.tf  instance.tf  key.tf  main.tf  network.tf  outs.tf  security.tf  storage.tf  vars.tf
src/tf/ddns/: README.md  api.tf  iam.tf  lambda.tf  main.tf  outs.tf  provider.tf  r53.tf  s3.tf  vars.tf
src/tf/ec2-chroma/: README.md  api.tf  iam.tf  logging.tf  main.tf  outs.tf  setup-docker.sh
src/tf/ec2-nlb-chroma/: README.md  api.tf  lb.tf  main.tf  outs.tf
src/tf/ec2OpenVPN/: README.md
src/tf/gcpArtifactRegistry/: README.md  main.tf
src/tf/gcpComputeEngineVMs/: README.md  main.tf  outputs.tf  startup_script.sh  variables.tf
src/tf/iam_management/: README.md
src/tf/internal-backend-3tier/: README.md  acm.tf  alb.tf  docker.tf  ecs.tf  r53.tf  security_groups.tf  vars.tf
src/tf/naive-3tier/: README.md  acm.tf  alb.tf  ecs.tf  iam.tf  instances.tf  loggings.tf  main.tf  outs.tf  rds.tf  route53.tf  security_groups.tf  utils.tf  vars.tf
src/tf/neptune-neo4j/: main.tf  network.tf  outs.tf  security.tf
src/tf/s3-ec2-vpn/: iam.tf  instances.tf  main.tf  network.tf  s3.tf
src/tf/s3-lambda/: main.tf  outs.tf
src/tf/sageMaker-image-batch-transform-job/: README.md  main.tf
src/tf/sageMaker-image-endpt-tpl/: README.md  iam.tf  loggings.tf  (+1 more)
(+549 files in other folders)
