[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["zcemycl <lyc010197@gmail.com>"]
readme = "README.md"
packages = [{ include = "backend",  from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
