[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["zcemycl <lyc010197@gmail.com>"]
readme = "README.md"
packages = [{ include = "backend",  from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
gunicorn = "^21.2.0"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
loguru = "^0.7.2"
pgvector = "^0.2.5"
sqlalchemy-utils = "^0.41.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
pydantic-settings = "^2.2.1"
requests = "^2.31.0"


[tool.poetry.group.db.dependencies]
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.3.0"
pytest = "^8.1.1"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
