[tool.poetry]
name = "alternative3"
version = "0.1.0"
description = ""
authors = ["zcemycl <lyc010197@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
dagster = "^1.6.9"
dagster-webserver = "^1.6.9"
pypdf = {extras = ["full"], version = "^4.1.0"}
pdfplumber = "^0.11.0"

[tool.dagster]
module_name = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
